syntax = "proto3";

package server_administration_service;

option go_package = "./pb";

service ServerAdministrationService {
    rpc GetAllAddresses (EmptyRequest) returns (AddressesResponse);
    rpc GetServerInformation (GetServerInformationRequest) returns (GetServerInformationResponse);
}

message EmptyRequest {}

message AddressesResponse {
    repeated AddressInfo addresses = 1;
}

message AddressInfo {
    int64 id = 1;
    string address = 2;
}

message GetServerInformationRequest {
    int64 startTime = 1;  // timestamp in unix format
    int64 endTime = 2;    // timestamp in unix format
}

message GetServerInformationResponse {
    int64 numServers = 1;
    int64 numOnServers = 2;
    int64 numOffServers = 3;
    float meanUptimeRatio = 4;
}